--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -4,7 +4,7 @@
 <b>Portal 2 Mod r007</b><br>
 - NEW: the Repulsion Gel Block<br>
 - NEW: the Propulsion Gel Block<br>
-- NEW: the Portal Radio block (tap it to play the \"radio loop\" song)<br>
+- NEW: the Portal Radio block (tap it to play the "radio loop" song)<br>
 - NEW: new UI in Minecraft style!<br>
 - NEW: a new settings to change the background image for the UIs<br>
 - UPDATE: re-written code for the turrets<br>
@@ -20,7 +20,7 @@
 
 <b>Portal 2 Mod r005</b><br>
 - NEW: you can set the buttons size for PortalGuns and GravityGun<br>
-- NEW: place 4 turrets near themselves and they will start to sing (see <a href=\"http://i.imgur.com/foYMwi1.jpg\">image</a>)<br>
+- NEW: place 4 turrets near themselves and they will start to sing (see <a href="http://i.imgur.com/foYMwi1.jpg">image</a>)<br>
 - UPDATE: increased the max limit of turrets, now you can spawn a max of 20 turrets.<br>
 - UPDATE: turrets open the guns when they are shooting. And if aggressive is ON a laser for the turret will appear<br>
 - UPDATE: added an option in the Turrets Options GUI for removing the turret<br>
@@ -33,25 +33,25 @@
 - NEW: PortalGuns can pick mobs<br>
 - NEW: momentum<br>
 - NEW: the PortalGun change color when you shoot<br>
-- NEW: added \"credits\", \"custom maps\" and \"settings for map-makers\" section in the GUI<br>
+- NEW: added "credits", "custom maps" and "settings for map-makers" section in the GUI<br>
 - NEW: check updates automatically when you launch the game (needs internet connection)<br>
 - UPDATE: flat portals<br>
 - UPDATE: new algorithm for long fall boots (works better)<br>
-- UPDATE: updated \"support the developer\" section in the GUI<br>
+- UPDATE: updated "support the developer" section in the GUI<br>
 - FIX: now correctly deletes the portals when your exit the game<br><br>
 
 <b>Portal 2 Mod r003</b><br>
 - NEW: restyled GUI (see screenshots)<br>
-- NEW: you can spawn portals under blocks (see <a href=\"http://imgur.com/GRlgnFX\">image</a>)<br>
+- NEW: you can spawn portals under blocks (see <a href="http://imgur.com/GRlgnFX">image</a>)<br>
 - NEW: damage for Portal guns<br>
 - NEW: sound for the PortalGun Wood & Stone<br>
-- NEW: \"turret song\" in the Portal jukebox<br>
+- NEW: "turret song" in the Portal jukebox<br>
 - FIX: fixed the bug that blue portals can be placed outside the world<br>
-- UPDATE: speed of \"mobs support for portals and jumper\" improved by ≈90%<br>
-- NEW: there is also an Easter Egg hidden in the \"Portal Informations\" GUI, is a button that you have to long press (can someone find it?)<br>
+- UPDATE: speed of "mobs support for portals and jumper" improved by ≈90%<br>
+- NEW: there is also an Easter Egg hidden in the "Portal Informations" GUI, is a button that you have to long press (can someone find it?)<br>
 
 <b>Portal 2 Mod r002</b><br>
-- NEW: option in the \"Portal Informations\" GUI to enable support of mobs in portals and jumpers<br>
+- NEW: option in the "Portal Informations" GUI to enable support of mobs in portals and jumpers<br>
 - NEW: sounds<br>
 - NEW: Portal Jukebox block<br>
 - NEW: jumper block<br>
