Changelog for the app

--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,7 +1,7 @@
-<b>Portal 2 Mod r008</b><br>
+<i>Portal 2 Mod r008</i><br>
 - FIX: fixed the bug that, when you are playing on negative axes, Jumper, Propulsion Gel and Repulsion Gel act like they are at -1 Z and -1 X from where they are<br><br>
 
-<b>Portal 2 Mod r007</b><br>
+<i>Portal 2 Mod r007</i><br>
 - NEW: the Repulsion Gel Block<br>
 - NEW: the Propulsion Gel Block<br>
 - NEW: the Portal Radio block (tap it to play the "radio loop" song)<br>
@@ -12,13 +12,13 @@
 - FIX: GravityGun shoot image<br>
 - FIX: invisible portals with the latest BlockLauncher beta<br><br>
 
-<b>Portal 2 Mod r006</b><br>
+<i>Portal 2 Mod r006</i><br>
 - NEW: added the Portal's items in Creative<br>
 - FIX: when you destroy the block under a turret, the turret will fall instead of flying (sometimes glitchy, in certain circumstances the turret can move itself after falling)<br>
 - FIX: fixed the bug that in certain circumstances, without an Internet connection, the mod wrongly reports that there is a new update<br>
 - UPDATE: increased a little bit speed of the PortalGun's bullets<br><br>
 
-<b>Portal 2 Mod r005</b><br>
+<i>Portal 2 Mod r005</i><br>
 - NEW: you can set the buttons size for PortalGuns and GravityGun<br>
 - NEW: place 4 turrets near themselves and they will start to sing (see <a href="http://i.imgur.com/foYMwi1.jpg">image</a>)<br>
 - UPDATE: increased the max limit of turrets, now you can spawn a max of 20 turrets.<br>
@@ -26,7 +26,7 @@
 - UPDATE: added an option in the Turrets Options GUI for removing the turret<br>
 - FIX: fixed the bug that turrets fly after they have been dropped by a PortalGun or by a GravityGun<br><br>
 
-<b>Portal 2 Mod r004</b><br>
+<i>Portal 2 Mod r004</i><br>
 - UPDATE: now compatible with MCPE 0.9.x<br>
 - NEW: Turrets<br>
 - NEW: GravityGun<br>
@@ -40,9 +40,9 @@
 - UPDATE: updated "support the developer" section in the GUI<br>
 - FIX: now correctly deletes the portals when your exit the game<br><br>
 
-<b>Portal 2 Mod r003</b><br>
-- NEW: restyled GUI (see screenshots)<br>
-- NEW: you can spawn portals under blocks (see <a href="http://imgur.com/GRlgnFX">image</a>)<br>
+<i>Portal 2 Mod r003</i><br>
+- NEW: restyled GUI<br>
+- NEW: you can spawn portals under blocks (see <a href="http://i.imgur.com/GRlgnFX.jpg">image</a>)<br>
 - NEW: damage for Portal guns<br>
 - NEW: sound for the PortalGun Wood & Stone<br>
 - NEW: "turret song" in the Portal jukebox<br>
@@ -50,7 +50,7 @@
 - UPDATE: speed of "mobs support for portals and jumper" improved by ≈90%<br>
 - NEW: there is also an Easter Egg hidden in the "Portal Informations" GUI, is a button that you have to long press (can someone find it?)<br>
 
-<b>Portal 2 Mod r002</b><br>
+<i>Portal 2 Mod r002</i><br>
 - NEW: option in the "Portal Informations" GUI to enable support of mobs in portals and jumpers<br>
 - NEW: sounds<br>
 - NEW: Portal Jukebox block<br>
@@ -58,5 +58,5 @@
 - NEW: long fall boots<br>
 - FIX & UPDATES: bug fix and improvements<br><br>
 
-<b>Portal 2 Mod r001:</b><br>
+<i>Portal 2 Mod r001:</i><br>
 - Initial release
