--- a/minecraft/desno365-mods-app/app-news.html
+++ b/minecraft/desno365-mods-app/app-news.html
@@ -1,2 +1,5 @@
+<i>7 December 2014</i><br>
+A new mod is going to be released Friday the 12th of December! It will bring a lot of guns and weapons.
+
 <i>19 October 2014</i><br>
 App released on the Google Play Store!
