New portal version; removed image in site/minecraft

--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,3 +1,6 @@
+<i>Portal 2 Mod r009</i><br>
+- NEW: support for Minecraft PE 0.10.4<br><br>
+
 <i>Portal 2 Mod r008</i><br>
 - FIX: fixed the bug that, when you are playing on negative axes, Jumper, Propulsion Gel and Repulsion Gel act like they are at -1 Z and -1 X from where they are<br><br>
 
