r002 of DesnoGuns Mod

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,2 +1,6 @@
+<i>DesnoGuns Mod r002</i><br>
+- FIX: gun's sound now won't be displayed in your music player<br>
+- FIX: other bug fixes (here more informations <a href="https://bitbucket.org/Desno365/desnoguns-mod/commits/de888e7d698451d049e66c74f27e3f8598c6a5c9">https://bitbucket.org/Des...c6a5c9</a>)<br><br>
+
 <i>DesnoGuns Mod r001:</i><br>
 - Initial release
