--- a/minecraft/desno365-mods-app/app-news.html
+++ b/minecraft/desno365-mods-app/app-news.html
@@ -1,3 +1,6 @@
+<i>12 December 2014</i><br>
+DesnoGuns Mod released!<br><br>
+
 <i>7 December 2014</i><br>
 A new mod is going to be released Friday the 12th of December! It will bring a lot of guns and weapons.<br><br>
 
