--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,25 @@
+<i>DesnoGuns Mod r003</i><br>
+- NEW: automatic sounds installation<br>
+- NEW: added recoil for all the guns<br>
+- NEW: new weapon: Flamethrower<br>
+- NEW: new weapon: Minigun Explosive<br>
+- NEW: new weapon: Makarov<br>
+- NEW: new weapon: AA-12 (pro item)<br>
+- NEW: new weapon: Incendiary Grenade Launcher (pro item)<br>
+- NEW: added texture pack with bullet texture instead of arrow<br>
+- NEW: options in Setting to enable reloading for guns also in Creative<br>
+- NEW: option in Settings to enable instant reload in Creative (only when reload in Creative is enabled)<br>
+- NEW: option to display the gun's name near the ammo text<br>
+- NEW: added an Easter Egg :P<br>
+- UPDATE: updated the Medical Kit with a new UI<br>
+- UPDATE: improved memory management<br>
+- UPDATE: improved start-up speed<br>
+- UPDATE: added sound when the parachute opens<br>
+- UPDATE: added sound when you try to shoot but the ammo is 0<br>
+- UPDATE: guns are displayed in alphabetical order in the Creative inventory<br>
+- FIX: fix Molotov didn't burn grass<br>
+- FIX: fix shadow for buttons in Android Lollipop<br><br>
+
 <i>DesnoGuns Mod r002</i><br>
 - FIX: gun's sound now won't be displayed in your music player<br>
 - FIX: other bug fixes (here more informations <a href="https://bitbucket.org/Desno365/desnoguns-mod/commits/de888e7d698451d049e66c74f27e3f8598c6a5c9">https://bitbucket.org/Des...c6a5c9</a>)<br><br>
