--- a/minecraft/laser-mod/full-changelog/changelog.html
+++ b/minecraft/laser-mod/full-changelog/changelog.html
@@ -6,5 +6,5 @@
 - NEW: new item: the Laser Bazooka.<br>
 - NEW: there is a Easter egg hidden in the GUI (the method to activate it is the same method used to open the Easter egg of the Portal 2 Mod)<br><br>
 
-<i>Laser Mod r001:</i><br>
+<i>Laser Mod r001</i><br>
 - Initial release
