--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -61,5 +61,5 @@
 - NEW: long fall boots<br>
 - FIX & UPDATES: bug fix and improvements<br><br>
 
-<i>Portal 2 Mod r001:</i><br>
+<i>Portal 2 Mod r001</i><br>
 - Initial release
