--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,12 @@
+<i>DesnoGuns Mod r004</i><br>
+- UPDATE: items and guns moved in the Tool category in the Creative inventory<br>
+- NEW: new weapon: .44 Magnum<br>
+- NEW: new armor: Juggernaut<br>
+- NEW: option in Settings to switch the position of the "fire" and "aim" buttons<br>
+- UPDATE: improvements in the Settings page<br>
+- FIX: fix bug of sounds installation when there isn't any Internet connection available<br>
+- FIX: guns now render vertically instead of horizontally in the third person view<br><br>
+
 <i>DesnoGuns Mod r003</i><br>
 - NEW: automatic sounds installation<br>
 - NEW: added recoil for all the guns<br>
@@ -7,7 +16,7 @@
 - NEW: new weapon: AA-12 (pro item)<br>
 - NEW: new weapon: Incendiary Grenade Launcher (pro item)<br>
 - NEW: added texture pack with bullet texture instead of arrow<br>
-- NEW: options in Setting to enable reloading for guns also in Creative<br>
+- NEW: option in Settings to enable reloading for guns also in Creative<br>
 - NEW: option in Settings to enable instant reload in Creative (only when reload in Creative is enabled)<br>
 - NEW: option to display the gun's name near the ammo text<br>
 - NEW: added an Easter Egg :P<br>
@@ -24,5 +33,5 @@
 - FIX: gun's sound now won't be displayed in your music player<br>
 - FIX: other bug fixes (here more informations <a href="https://bitbucket.org/Desno365/desnoguns-mod/commits/de888e7d698451d049e66c74f27e3f8598c6a5c9">https://bitbucket.org/Des...c6a5c9</a>)<br><br>
 
-<i>DesnoGuns Mod r001:</i><br>
+<i>DesnoGuns Mod r001</i><br>
 - Initial release
