--- a/minecraft/desno365-mods-app/app-news-test.html
+++ b/minecraft/desno365-mods-app/app-news-test.html
@@ -1,17 +1,17 @@
-<i>24 March 2015</i><br>
-Released my first modded map: the Unreal Geometry Map.<br><p></p><br>
+<i>24 March 2015</i><endtitle>
+Released my first modded map: the Unreal Geometry Map.<endcontent>
 
-<i>16 February 2015</i><br>
-DesnoGuns Mod r004<br><p></p><br>
+<i>16 February 2015</i><endtitle>
+DesnoGuns Mod r004<endcontent>
 
-<i>24 January 2015</i><br>
-DesnoGuns Mod r003<br><p></p><br>
+<i>24 January 2015</i><endtitle>
+DesnoGuns Mod r003<endcontent>
 
-<i>12 December 2014</i><br>
-DesnoGuns Mod released!<br><p></p><br>
+<i>12 December 2014</i><endtitle>
+DesnoGuns Mod released!<endcontent>
 
-<i>7 December 2014</i><br>
-A new mod is going to be released Friday the 12th of December! It will bring a lot of guns and weapons.<br><p></p><br>
+<i>7 December 2014</i><endtitle>
+A new mod is going to be released Friday the 12th of December! It will bring a lot of guns and weapons.<endcontent>
 
-<i>19 October 2014</i><br>
-App released on the Google Play Store!
+<i>19 October 2014</i><endtitle>
+App released on the Google Play Store!<endcontent>
