--- a/minecraft/desno365-mods-app/app-news.html
+++ b/minecraft/desno365-mods-app/app-news.html
@@ -1,3 +1,12 @@
+<i>24 March 2015</i><br>
+Released my first modded map: the Unreal Geometry Map.<br><br>
+
+<i>16 February 2015</i><br>
+DesnoGuns Mod r004<br><br>
+
+<i>24 January 2015</i><br>
+DesnoGuns Mod r003<br><br>
+
 <i>12 December 2014</i><br>
 DesnoGuns Mod released!<br><br>
 
