Finished testing links in news

--- a/minecraft/desno365-mods-app/app-news-v2.html
+++ b/minecraft/desno365-mods-app/app-news-v2.html
@@ -1,6 +1,5 @@
 <i>24 March 2015</i><endtitle>
-Released my first modded map: the Unreal Geometry Map.<br>
-Test link: <a href="http://desno365.github.io">test lol</a><endcontent>
+Released my first modded map: the Unreal Geometry Map.<endcontent>
 
 <i>16 February 2015</i><endtitle>
 DesnoGuns Mod r004<endcontent>
