--- a/minecraft/desno365-mods-app/app-news-v2.html
+++ b/minecraft/desno365-mods-app/app-news-v2.html
@@ -1,3 +1,7 @@
+<i>9 April 2015</i><endtitle>
+Mojang has released Minecraft 0.11.0 beta!<br>
+When the stable version comes out I'll start to update my mods with the new version.<endcontent>
+
 <i>24 March 2015</i><endtitle>
 Released my first modded map: the Unreal Geometry Map.<endcontent>
 
