--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,12 @@
+<i>DesnoGuns Mod r005</i><br>
+- NEW: support for Minecraft PE 0.11.x<br>
+- NEW: compatibility with Android M<br>
+- UPDATE: some IDs has been changed because some of them were overriding beetroot and related items, IDs changed: DesnoGuns Info, .44Magnum, Grenade, Fragment Grenade, Molotov.<br>
+- FIX: fix the "resurrector knife" bug<br>
+- FIX: fix the "shooting while reload" bug<br>
+- FIX: fix the "parachute not working on grass" bug<br>
+- FIX: before, on some devices, while aiming with a sniper rifle there was one line of pixels not black. Now it has been fixed<br>
+
 <i>DesnoGuns Mod r004</i><br>
 - UPDATE: items and guns moved in the Tool category in the Creative inventory<br>
 - NEW: new weapon: .44 Magnum<br>
