Fix changelog DesnoGuns r005

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -5,7 +5,7 @@
 - FIX: fix the "resurrector knife" bug<br>
 - FIX: fix the "shooting while reload" bug<br>
 - FIX: fix the "parachute not working on grass" bug<br>
-- FIX: before, on some devices, while aiming with a sniper rifle there was one line of pixels not black. Now it has been fixed<br>
+- FIX: before, on some devices, while aiming with a sniper rifle there was one line of pixels not black. Now it has been fixed<br><br>
 
 <i>DesnoGuns Mod r004</i><br>
 - UPDATE: items and guns moved in the Tool category in the Creative inventory<br>
