--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,7 +1,7 @@
 <i>DesnoGuns Mod r005</i><br>
 - NEW: support for Minecraft PE 0.11.x<br>
 - NEW: compatibility with Android M<br>
-- UPDATE: some IDs has been changed because some of them were overriding beetroot and related items, IDs changed: DesnoGuns Info, .44Magnum, Grenade, Fragment Grenade, Molotov.<br>
+- UPDATE: some IDs have been changed because some of them were overriding beetroot and related items, IDs changed: DesnoGuns Info, .44Magnum, Grenade, Fragment Grenade, Molotov.<br>
 - FIX: fix the "resurrector knife" bug<br>
 - FIX: fix the "shooting while reload" bug<br>
 - FIX: fix the "parachute not working on grass" bug<br>
