--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,3 +1,11 @@
+<i>Portal 2 Mod r010</i><br>
+- NEW: support for Minecraft PE 0.11.x<br>
+- NEW: compatibility with Android M<br>
+- UPDATE: all the IDs have been changed! If you have a map that uses this mod you'll have to update it<br>
+- UPDATE: some items are now rendered vertically in third person view<br>
+- FIX: Long Fall Boots item now doesn't override the Chain Boots<br>
+- FIX: fix black background on textures of portals<br><br>
+
 <i>Portal 2 Mod r009</i><br>
 - NEW: support for Minecraft PE 0.10.4<br><br>
 
