--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,16 @@
+<i>DesnoGuns Mod r006</i><br>
+- NEW: Minecraft style for UIs<br>
+- NEW: new option in Settings to enable Minecraft style for the "fire" and "aim" buttons<br>
+- NEW: volume option in Settings<br>
+- NEW: slightly better animation when aiming with a Sniper Rifle<br>
+- NEW: volume of sound based on the distance from the source (for Molotov and Incendiary Grenade Launcher)<br>
+- UPDATE: The Juggernaut armor now doesn't override the Chain armor (IDs changed!)<br>
+- UPDATE: code re-written in many parts and improved: this should increase performance when loading the script at startup<br>
+- FIX: fixed disappearing items from the creative menu<br>
+- FIX: fixed the "double tap fast the aim button" bug that caused glitches with zoom<br>
+- FIX: fixed shadows and collision size of grenades<br>
+- FIX: fixed <a href="http://i.imgur.com/VDrmCkc.png">a graphical glitch</a> that was happening when using other Texture Packs at the same time<br><br>
+
 <i>DesnoGuns Mod r005</i><br>
 - NEW: support for Minecraft PE 0.11.x<br>
 - NEW: compatibility with Android M<br>
