--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,14 @@
+<i>DesnoGuns Mod r007</i><br>
+- NEW: Crossbow<br>
+- NEW: Crossbow Explosive<br>
+- NEW: Smoke Grenade<br>
+- NEW: Riot Shield<br>
+- NEW: MSR (pro item)<br>
+- UPDATE: many IDs changed! (IDs changed: all the ammunitions and these items: Molotov, Fragment Grenade, Grenade, Medical Kit, Parachute, Knife, DesnoGuns Info, .44Magnum)<br>
+- FIX: fixed Settings section not working on Android 4.0<br>
+- FIX: fixed a crash with grenades when leaving the game<br>
+- FIX: fixed volume options not applied to reload sounds and miniguns<br><br>
+
 <i>DesnoGuns Mod r006</i><br>
 - NEW: Minecraft style for UIs<br>
 - NEW: new option in Settings to enable Minecraft style for the "fire" and "aim" buttons<br>
