--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,6 @@
+<i>DesnoGuns Mod r008</i><br>
+- NEW: support for Minecraft PE 0.12.x<br><br>
+
 <i>DesnoGuns Mod r007</i><br>
 - NEW: Crossbow<br>
 - NEW: Crossbow Explosive<br>
