--- a/minecraft/jukebox-mod/full-changelog/changelog.html
+++ b/minecraft/jukebox-mod/full-changelog/changelog.html
@@ -1,6 +1,12 @@
+<i>Jukebox Mod r003</i><br>
+- UPDATE: IDs of discs updated, now they are the same as in Minecraft PC<br>
+- UPDATE: discs moved in the Tools category in the creative menu<br>
+- UPDATE: the useless Information UI has been removed<br>
+- FIX: the disc is not removed anymore from hand in creative<br><br>
+
 <i>Jukebox Mod r002</i><br>
-- NEW: now it's possible to craft the jukebox.<br>
-- UPDATED: increased the distance when the volume of the music is 0 (before the volume became 0 at 30 blocks, now you need a distance of 65 blocks for a volume of 0). This is now the same as the PC.<br><br>
+- NEW: now it's possible to craft the jukebox<br>
+- UPDATED: increased the distance when the volume of the music is 0 (before the volume became 0 at 30 blocks, now you need a distance of 65 blocks for a volume of 0). This is now the same as the PC<br><br>
 
 <i>Jukebox Mod r001</i><br>
 - Initial release
