Update Portal 2 Mod

--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,73 +1,11 @@
-<i>Portal 2 Mod r010</i><br>
-- NEW: support for Minecraft PE 0.11.x<br>
-- NEW: compatibility with Android M<br>
-- UPDATE: all the IDs have been changed! If you have a map that uses this mod you'll have to update it<br>
-- UPDATE: some items are now rendered vertically in third person view<br>
-- FIX: Long Fall Boots item now doesn't override the Chain Boots<br>
-- FIX: fix black background on textures of portals<br><br>
-
-<i>Portal 2 Mod r009</i><br>
-- NEW: support for Minecraft PE 0.10.4<br><br>
-
-<i>Portal 2 Mod r008</i><br>
-- FIX: fixed the bug that, when you are playing on negative axes, Jumper, Propulsion Gel and Repulsion Gel act like they are at -1 Z and -1 X from where they are<br><br>
-
-<i>Portal 2 Mod r007</i><br>
-- NEW: the Repulsion Gel Block<br>
-- NEW: the Propulsion Gel Block<br>
-- NEW: the Portal Radio block (tap it to play the "radio loop" song)<br>
-- NEW: new UI in Minecraft style!<br>
-- NEW: a new settings to change the background image for the UIs<br>
-- UPDATE: re-written code for the turrets<br>
-- UPDATE: different folder for the portal-sounds<br>
-- FIX: GravityGun shoot image<br>
-- FIX: invisible portals with the latest BlockLauncher beta<br><br>
-
-<i>Portal 2 Mod r006</i><br>
-- NEW: added the Portal's items in Creative<br>
-- FIX: when you destroy the block under a turret, the turret will fall instead of flying (sometimes glitchy, in certain circumstances the turret can move itself after falling)<br>
-- FIX: fixed the bug that in certain circumstances, without an Internet connection, the mod wrongly reports that there is a new update<br>
-- UPDATE: increased a little bit speed of the PortalGun's bullets<br><br>
-
-<i>Portal 2 Mod r005</i><br>
-- NEW: you can set the buttons size for PortalGuns and GravityGun<br>
-- NEW: place 4 turrets near themselves and they will start to sing (see <a href="http://i.imgur.com/foYMwi1.jpg">image</a>)<br>
-- UPDATE: increased the max limit of turrets, now you can spawn a max of 20 turrets.<br>
-- UPDATE: turrets open the guns when they are shooting. And if aggressive is ON a laser for the turret will appear<br>
-- UPDATE: added an option in the Turrets Options GUI for removing the turret<br>
-- FIX: fixed the bug that turrets fly after they have been dropped by a PortalGun or by a GravityGun<br><br>
-
-<i>Portal 2 Mod r004</i><br>
-- UPDATE: now compatible with MCPE 0.9.x<br>
-- NEW: Turrets<br>
-- NEW: GravityGun<br>
-- NEW: PortalGuns can pick mobs<br>
-- NEW: momentum<br>
-- NEW: the PortalGun change color when you shoot<br>
-- NEW: added "credits", "custom maps" and "settings for map-makers" section in the GUI<br>
-- NEW: check updates automatically when you launch the game (needs internet connection)<br>
-- UPDATE: flat portals<br>
-- UPDATE: new algorithm for long fall boots (works better)<br>
-- UPDATE: updated "support the developer" section in the GUI<br>
-- FIX: now correctly deletes the portals when your exit the game<br><br>
-
-<i>Portal 2 Mod r003</i><br>
-- NEW: restyled GUI<br>
-- NEW: you can spawn portals under blocks (see <a href="http://i.imgur.com/GRlgnFX.jpg">image</a>)<br>
-- NEW: damage for Portal guns<br>
-- NEW: sound for the PortalGun Wood & Stone<br>
-- NEW: "turret song" in the Portal jukebox<br>
-- FIX: fixed the bug that blue portals can be placed outside the world<br>
-- UPDATE: speed of "mobs support for portals and jumper" improved by ≈90%<br>
-- NEW: there is also an Easter Egg hidden in the "Portal Informations" GUI, is a button that you have to long press (can someone find it?)<br>
-
-<i>Portal 2 Mod r002</i><br>
-- NEW: option in the "Portal Informations" GUI to enable support of mobs in portals and jumpers<br>
-- NEW: sounds<br>
-- NEW: Portal Jukebox block<br>
-- NEW: jumper block<br>
-- NEW: long fall boots<br>
-- FIX & UPDATES: bug fix and improvements<br><br>
-
-<i>Portal 2 Mod r001</i><br>
-- Initial release
+<i>Portal 2 Mod r011</i><br>
+- NEW: support for Minecraft PE 0.12.x<br>
+- NEW: Turrets Defective<br>
+- NEW: Cube and Companion Cube<br>
+- NEW: new UIs when holding a Portal Gun or the Gravity Gun<br>
+- NEW: Portal Guns and Gravity Gun can pick up blocks<br>
+- UPDATE: automatic sounds installation (only music files need to be manually installed)<br>
+- UPDATE: volume of sounds based on the distance from the source<br>
+- UPDATE: better Jukebox<br>
+- UPDATE: better Jumper (Aerial Faith Plate)<br>
+- UPDATE: better repulsion gel (now it also makes your jump more powerful)
