--- a/minecraft/jukebox-mod/full-changelog/changelog.html
+++ b/minecraft/jukebox-mod/full-changelog/changelog.html
@@ -1,3 +1,6 @@
+<i>Jukebox Mod r004</i><br>
+- NEW: support for Minecraft PE 0.13.x<br><br>
+
 <i>Jukebox Mod r003</i><br>
 - UPDATE: IDs of discs updated, now they are the same as in Minecraft PC<br>
 - UPDATE: discs moved in the Tools category in the creative menu<br>
