--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,10 @@
+<i>DesnoGuns Mod r009</i><br>
+- NEW: support for Minecraft PE 0.13.x (make sure to use the latest beta of BlockLauncher, you can get it <a href="http://zhuowei.github.com/MCPELauncher/MCPELauncherApp-release-beta.apk">from here</a>)<br>
+- UPDATE: add blindness effect for the smoke grenade<br>
+- UPDATE: add immersive mode support<br>
+- FIX: some IDs have been changed to fix a bug of the Creative inventory, IDs changed: AK47, AK74, AT4, AUG, Bizon<br><br>
+
+
 <i>DesnoGuns Mod r008</i><br>
 - NEW: support for Minecraft PE 0.12.x<br><br>
 
