--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,10 @@
+<i>DesnoGuns Mod r010</i><br>
+- NEW: added the Multiple Rocket Launcher<br>
+- UPDATE: added a smoke trail behind bullets of rocket launchers<br>
+- FIX: fixed explosive bullets sometimes exploding in air<br>
+- FIX: enchanted golden apple and other items were recognized as guns<br>
+- FIX: fixed the crash with the Minecraft style buttons<br><br>
+
 <i>DesnoGuns Mod r009</i><br>
 - NEW: support for Minecraft PE 0.13.x (make sure to use the latest beta of BlockLauncher, you can get it <a href="http://zhuowei.github.com/MCPELauncher/MCPELauncherApp-release-beta.apk">from here</a>)<br>
 - UPDATE: add blindness effect for the smoke grenade<br>
