DesnoGuns r011 (update for 0.13.1)

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,7 @@
+<i>DesnoGuns Mod r011</i><br>
+- NEW: support for Minecraft PE 0.13.1<br>
+- WARNING: since BlockLauncher is not yet updated for 0.13.1 grenades are buggy<br><br>
+
 <i>DesnoGuns Mod r010</i><br>
 - NEW: added the Multiple Rocket Launcher<br>
 - UPDATE: added a smoke trail behind bullets of rocket launchers<br>
