--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,3 +1,7 @@
+<i>Portal 2 Mod r012</i><br>
+- NEW: support for Minecraft PE 0.13.1<br>
+- FIX: fixed some minor bugs<br><br>
+
 <i>Portal 2 Mod r011</i><br>
 - NEW: support for Minecraft PE 0.12.x<br>
 - NEW: Turrets Defective<br>
