DesnoGuns r012; Fix tables with new website version

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,12 @@
+<i>DesnoGuns Mod r012</i><br>
+- NEW: support for Minecraft PE 0.14.0<br>
+- NEW: support for DesnoGuns addons, a new way to add new guns in the game for everyone!<br>
+- NEW: Ray Gun<br>
+- NEW: Binoculars<br>
+- NEW: Zoom Binoculars (Pro item)<br>
+- UPDATE: added the Juggernaut armor to the creative inventory<br>
+- FIX: many bugs fixed<br><br>
+
 <i>DesnoGuns Mod r011</i><br>
 - NEW: support for Minecraft PE 0.13.1<br>
 - WARNING: since BlockLauncher is not yet updated for 0.13.1 grenades are buggy<br><br>
