--- a/minecraft/jukebox-mod/full-changelog/changelog.html
+++ b/minecraft/jukebox-mod/full-changelog/changelog.html
@@ -1,3 +1,6 @@
+<i>Jukebox Mod r005</i><br>
+- NEW: easier installation!<br><br>
+
 <i>Jukebox Mod r004</i><br>
 - NEW: support for Minecraft PE 0.13.x<br><br>
 
