Unreal Geometry Map r003

--- a/minecraft/unreal-map/full-changelog/changelog.html
+++ b/minecraft/unreal-map/full-changelog/changelog.html
@@ -1,3 +1,8 @@
+<i>Unreal Geometry Map r003</i><br>
+- UPDATE: hostile mobs are automatically removed from the map<br>
+- FIX: fixed a bug with devices running Android 6.0 or up<br>
+- FIX: fixed wrong position of trapdoors at the end of the map<br><br>
+
 <i>Unreal Geometry Map r002</i><br>
 - FIX: fixed a bug of the mod that can cause a crash when the player enters in a world<br>
 - FIX: other bug-fixes inside the mod<br><br>
