--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,10 @@
+<i>DesnoGuns Mod r013</i><br>
+- NEW: easier installation, with just one .modpkg file that can be imported in BlockLauncher in the ModPE section<br>
+- UPDATE: offline sounds installation<br>
+- UPDATE: better information UI for guns specifications when using addons<br>
+- FIX: binoculars not craftable<br>
+- FIX: fixed a bug that showed the user a non-existent error with addons<br><br>
+
 <i>DesnoGuns Mod r012</i><br>
 - NEW: support for Minecraft PE 0.14.0<br>
 - NEW: support for DesnoGuns addons, a new way to add new guns in the game for everyone!<br>
