--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,9 @@
+<i>DesnoGuns Mod r014</i><br>
+- FIX: finally fixed the arrows bouncing back bug! (only with BlockLauncher 1.12.3 or up)<br>
+- FIX: fixed a critical bug when creating addons<br>
+- UPDATE: reload in creative now is enabled by default (can be disabled in Settings)<br>
+- UPDATE: some sounds improvements and changes<br><br>
+
 <i>DesnoGuns Mod r013</i><br>
 - NEW: easier installation, with just one .modpkg file that can be imported in BlockLauncher in the ModPE section<br>
 - UPDATE: offline sounds installation<br>
