Add Laser Guns Add-on

--- a/minecraft/laser-mod/full-changelog/changelog.html
+++ b/minecraft/laser-mod/full-changelog/changelog.html
@@ -1,10 +1,3 @@
-<i>Laser Mod r003</i><br>
-- NEW: new item: the Laser Sniper Rifle.<br>
-- UPDATE: updated the bazooka shooting system, now you don't have to wait the explosion of the first bullet for shooting a second bullet.<br><br>
-
-<i>Laser Mod r002</i><br>
-- NEW: new item: the Laser Bazooka.<br>
-- NEW: there is a Easter egg hidden in the GUI (the method to activate it is the same method used to open the Easter egg of the Portal 2 Mod)<br><br>
-
-<i>Laser Mod r001</i><br>
-- Initial release
+<i>Laser Mod r004</i><br>
+- NEW: the Laser Mod has just become the Laser Guns Addon<br>
+- NEW: new gun, the Laser Rail Gun
