--- a/minecraft/laser-mod/full-changelog/changelog.html
+++ b/minecraft/laser-mod/full-changelog/changelog.html
@@ -1,3 +1,3 @@
 <i>Laser Mod r004</i><br>
-- NEW: the Laser Mod has just become the Laser Guns Addon<br>
+- NEW: the Laser Mod has just become the Laser Guns Addon, an addon for the <a href="http://desno365.net/minecraft/desnoguns-mod/">DesnoGuns Mod</a><br>
 - NEW: new gun, the Laser Rail Gun
