--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,3 +1,9 @@
+<i>Portal 2 Mod r014</i><br>
+- NEW: easier installation, with just one .modpkg file. Manual sounds installation is no longer necessary!<br>
+- UPDATE: blocks of the mod moved in the decorative blocks tab in the creative inventory<br>
+- UPDATE: Long Fall Boots added in the creative inventory<br>
+- FIX: fixed black text on dark background in the information UI<br><br>
+
 <i>Portal 2 Mod r013</i><br>
 - NEW: support for Minecraft PE 0.14.0<br><br>
 
