--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,8 @@
+<i>DesnoGuns Mod r015</i><br>
+- UPDATE: added ammunition items and the medical kit in the food and potions tab in the creative inventory<br>
+- FIX: fixed sounds interruptions<br>
+- FIX: fixed crash when clicking the reload text while shooting<br><br>
+
 <i>DesnoGuns Mod r014</i><br>
 - FIX: finally fixed the arrows bouncing back bug! (only with BlockLauncher 1.12.3 or up)<br>
 - FIX: fixed a critical bug when creating addons<br>
