--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,7 @@
+<i>DesnoGuns Mod r016</i><br>
+- FIX: fixed lags when shooting and improved performance<br>
+- FIX: other bug fixes<br><br>
+
 <i>DesnoGuns Mod r015</i><br>
 - UPDATE: added ammunition items and the medical kit in the food and potions tab in the creative inventory<br>
 - FIX: fixed sounds interruptions<br>
