--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,6 @@
+<i>DesnoGuns Mod r017</i><br>
+- FIX: workaround fix for crash at startup caused by a bug of BlockLauncher with armors. I had to remove the Juggernaut (temporarily) to fix the problem<br><br>
+
 <i>DesnoGuns Mod r016</i><br>
 - FIX: fixed lags when shooting and improved performance<br>
 - FIX: other bug fixes<br><br>
