--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,14 @@
+<i>DesnoGuns Mod r018</i><br>
+- NEW: support for Minecraft PE 0.15 (works only with the latest beta of BlockLauncher! Get it from <a href="http://zhuoweizhang.net/MCPELauncher/MCPELauncherApp-release-beta.apk">here</a>)<br>
+- NEW: a new Sniper Rifle, the M40A3 Night Vision<br>
+- NEW: Night Binoculars<br>
+- NEW: Jungle Camo Armor<br>
+- UPDATE: the Juggernaut is now stronger than the Diamond Armor but it also adds a slowness effect<br>
+- UPDATE: more realistic binoculars images<br>
+- FIX: the UI of the mod and of the guns now is closed when opening the inventory or the chat menu<br>
+- FIX: fixed Sniper Ammo item not added in the creative inventory<br>
+- ADDONS: new APIs for Addons Developers! Support for a custom image when aiming (customAimImageLayerPath String), night vision effect when aiming (hasNightVision boolean), custom sound of the countdown when using bullet type "normal_explosive_on_time" (countdownSoundExplosiveOnTime String)<br><br>
+
 <i>DesnoGuns Mod r017</i><br>
 - FIX: workaround fix for crash at startup caused by a bug of BlockLauncher with armors. I had to remove the Juggernaut (temporarily) to fix the problem<br><br>
 
