Changes in some changelogs

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,5 +1,5 @@
 <i>DesnoGuns Mod r018</i><br>
-- NEW: support for Minecraft PE 0.15 (works only with the latest beta of BlockLauncher! Get it from <a href="http://zhuoweizhang.net/MCPELauncher/MCPELauncherApp-release-beta.apk">here</a>)<br>
+- NEW: support for Minecraft PE 0.15<br>
 - NEW: a new Sniper Rifle, the M40A3 Night Vision<br>
 - NEW: Night Binoculars<br>
 - NEW: Jungle Camo Armor<br>
@@ -55,7 +55,7 @@
 - FIX: fixed the crash with the Minecraft style buttons<br><br>
 
 <i>DesnoGuns Mod r009</i><br>
-- NEW: support for Minecraft PE 0.13.x (make sure to use the latest beta of BlockLauncher, you can get it <a href="http://zhuowei.github.com/MCPELauncher/MCPELauncherApp-release-beta.apk">from here</a>)<br>
+- NEW: support for Minecraft PE 0.13.x<br>
 - UPDATE: add blindness effect for the smoke grenade<br>
 - UPDATE: add immersive mode support<br>
 - FIX: some IDs have been changed to fix a bug of the Creative inventory, IDs changed: AK47, AK74, AT4, AUG, Bizon<br><br>
