--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -12,6 +12,7 @@
 - FIX: fixed some minor bugs<br><br>
 
 <i>Portal 2 Mod r011</i><br>
+- The mod has been completely rewritten. Basically it's like a new mod, so writing an accurate changelog is not possible<br>
 - NEW: support for Minecraft PE 0.12.x<br>
 - NEW: Turrets Defective<br>
 - NEW: Cube and Companion Cube<br>
