--- a/minecraft/jukebox-mod/full-changelog/changelog.html
+++ b/minecraft/jukebox-mod/full-changelog/changelog.html
@@ -1,4 +1,5 @@
 <i>Jukebox Mod r005</i><br>
+- Support for Minecraft PE 0.15.x (works only with the latest beta of BlockLauncher! Get it from <a href="http://zhuoweizhang.net/MCPELauncher/MCPELauncherApp-release-beta.apk">here</a>)<br>
 - NEW: easier installation!<br><br>
 
 <i>Jukebox Mod r004</i><br>
