--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,12 @@
+<i>DesnoGuns Mod r019</i><br>
+- NEW: support 0.16.x (check on the Play Store if you're using the latest version of BlockLauncher!)<br>
+- NEW: the Iron Sights update!<br>
+- NEW: some guns will show their iron sight when aiming (currently available for AK47, AUG, Desert Eagle, FNSCAR, Mini-Uzi, MP5, P90, Skorpion)<br>
+- NEW: option for disabling iron sight if you don't like them<br>
+- FIX: explosions not destroying blocks<br>
+- ADDONS: fix custom guns with buttonType "on_touch_with_wait" not shooting when using an aim image<br>
+- ADDONS: add isIronSight property that must be set to true when using an iron sight and not a full-screen scope for the gun (see Example Addon)<br><br>
+
 <i>DesnoGuns Mod r018</i><br>
 - NEW: a new Sniper Rifle, the M40A3 Night Vision<br>
 - NEW: Night Binoculars<br>
