--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,10 @@
+<i>DesnoGuns Mod r020</i><br>
+- UPDATE: full support for 1.0.0 beta (use the latest version of BlockLauncher)<br>
+- FIX: huge lags when shooting explosive arrows in the air<br>
+- FIX: lags caused by arrows on the ground<br>
+- FIX: wrong health damage when hitting the mob multiple times<br>
+- FIX: bouncing back arrows workaround not working<br><br>
+
 <i>DesnoGuns Mod r019</i><br>
 - NEW: support 0.16.x (check on the Play Store if you're using the latest version of BlockLauncher!)<br>
 - NEW: the Iron Sights update!<br>
