Update changelog (minor changes)

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,5 +1,5 @@
 <i>DesnoGuns Mod r020</i><br>
-- UPDATE: full support for 1.0.0 beta (use the latest version of BlockLauncher)<br>
+- UPDATE: full support for 1.0.0 (use the latest version of BlockLauncher)<br>
 - FIX: huge lags when shooting explosive arrows in the air<br>
 - FIX: lags caused by arrows on the ground<br>
 - FIX: wrong health damage when hitting the mob multiple times<br>
