--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -1,3 +1,11 @@
+<i>Portal 2 Mod r015</i><br>
+- NEW: support for Minecraft PE 1.0.0 (still has few bugs, portals aren't transparent for example)<br>
+- UPDATE: improved Portal creation system<br>
+- UPDATE: use less IDs for Portals blocks and Radio block, this means less conflicts with other mods (thanks to julianwi)<br>
+- FIX: turrets now can't be killed by the player with the Portal Gun<br>
+- FIX: baby turrets<br>
+- FIX: many other fixes (for more information see <a href="https://github.com/Desno365/Portal-Mod">commit history on GitHub</a>)<br><br>
+
 <i>Portal 2 Mod r014</i><br>
 - NEW: easier installation, with just one .modpkg file. Manual sounds installation is no longer necessary!<br>
 - UPDATE: blocks of the mod moved in the decorative blocks tab in the creative inventory<br>
