Little changes in Portal mod changelog

--- a/minecraft/portal2-mod/full-changelog/changelog.html
+++ b/minecraft/portal2-mod/full-changelog/changelog.html
@@ -4,7 +4,7 @@
 - UPDATE: use less IDs for Portals blocks and Radio block, this means less conflicts with other mods (thanks to julianwi)<br>
 - FIX: turrets now can't be killed by the player with the Portal Gun<br>
 - FIX: baby turrets<br>
-- FIX: many other fixes (for more information see <a href="https://github.com/Desno365/Portal-Mod">commit history on GitHub</a>)<br><br>
+- FIX: many other fixes (for more information see <a href="https://github.com/Desno365/Portal-Mod/commits/r015">commit history on GitHub</a>)<br><br>
 
 <i>Portal 2 Mod r014</i><br>
 - NEW: easier installation, with just one .modpkg file. Manual sounds installation is no longer necessary!<br>
