--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,8 @@
+<i>DesnoGuns Mod r021</i><br>
+- FIX: volume option not applied to miniguns<br>
+- FIX: explosion too powerful due to changes in the latest versions of MCPE<br>
+- UPDATE: smoother aiming animation<br><br>
+
 <i>DesnoGuns Mod r020</i><br>
 - UPDATE: full support for 1.0.0 (use the latest version of BlockLauncher)<br>
 - FIX: huge lags when shooting explosive arrows in the air<br>
