--- a/referral/redirect01.html
+++ b/referral/redirect01.html
@@ -7,7 +7,7 @@
 		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 		ga('create', 'UA-55378092-3', 'auto');
-		ga('send', 'pageview');
+		ga('send', 'pageview', '/referral/redirect01.html');
 
 	</script>
 	<noscript>
