--- a/referral/redirect01.html
+++ b/referral/redirect01.html
@@ -1,25 +1,33 @@
 <!DOCTYPE HTML>
-<head>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+<html>
+	<head>
+		<title>Redirecting...</title>
+		<script>
+			setTimeout(redirect, 2000);
+			var redirected = false;
+			function redirect() {
+				if (!redirected) {
+					redirected = true;
+					location.href = 'http://onelink.to/stmj5w';
+				}
+			}
 
-		ga('create', 'UA-55378092-3', 'auto');
-		ga('send', 'pageview', '/referral/redirect01.html');
+			// analytics
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-	</script>
-	<noscript>
-		<meta http-equiv="refresh" content="0; url=http://onelink.to/stmj5w" />
-	</noscript>
-</head>
-
-<body onload="onWindowLoad()">
-	<script>
-		onWindowLoad = function(){
-			window.location.href = "http://onelink.to/stmj5w";
-		}
-	</script>
-	Se non sei stato reindirizzato automaticamente, clicca <a href='http://onelink.to/stmj5w'>questo link</a>.
-</body>
+			ga('create', 'UA-55378092-3', 'auto');
+			ga('send', 'pageview', {
+				hitCallback: redirect
+			});
+		</script>
+		<noscript>
+			<meta http-equiv="refresh" content="0; url=http://onelink.to/stmj5w" />
+		</noscript>
+	</head>
+	<body>
+		Se non sei stato reindirizzato automaticamente, clicca <a href='http://onelink.to/stmj5w'>QUESTO LINK</a>.
+	</body>
+</html>
