--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,8 @@
+<i>DesnoGuns Mod r022</i><br>
+- NEW: experimental support for Minecraft PE 1.1.0<br>
+- NEW: THE MELEE WEAPONS UPDATE!<br>
+- NEW: 7 new melee weapons have been added to the mod so you can now smash zombies and hostile mobs!<br><br>
+
 <i>DesnoGuns Mod r021</i><br>
 - FIX: volume option not applied to miniguns<br>
 - FIX: explosion too powerful due to changes in the latest versions of MCPE<br>
