--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,8 @@
+<i>DesnoGuns Mod r023</i><br>
+- FIX: fixed not working recoil<br>
+- FIX: fixed UI not hidden when opening the inventory or the pause menu<br>
+- FIX: fixed chainsaw and machete ability to cut wood and grass<br><br>
+
 <i>DesnoGuns Mod r022</i><br>
 - NEW: experimental support for Minecraft PE 1.1.0<br>
 - NEW: THE MELEE WEAPONS UPDATE!<br>
