--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,7 @@
+<i>DesnoGuns Mod r024</i><br>
+- NEW: the Exoskeleton armor!<br>
+- NEW: separated tabs for guns using <a href="http://www.minecraftforum.net/forums/minecraft-pocket-edition/mcpe-mods-tools/2842644">InventoryPlus</a><br><br>
+
 <i>DesnoGuns Mod r023</i><br>
 - FIX: fixed not working recoil<br>
 - FIX: fixed UI not hidden when opening the inventory or the pause menu<br>
