--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -1,3 +1,8 @@
+<i>DesnoGuns Mod r025</i><br>
+- NEW: full support for Minecraft PE 1.2 beta (make sure to use <a href="http://zhuoweizhang.net/MCPELauncher/MCPELauncherApp-release-beta.apk">latest BlockLauncher beta</a>)<br>
+- UPDATE: changed IDs of some guns to avoid conflicts with Jukebox Discs<br>
+- FIX: fixed crash with Crossbow Explosive<br><br>
+
 <i>DesnoGuns Mod r024</i><br>
 - NEW: the Exoskeleton armor!<br>
 - NEW: separated tabs for guns using <a href="http://www.minecraftforum.net/forums/minecraft-pocket-edition/mcpe-mods-tools/2842644">InventoryPlus</a><br><br>
