Changed all possible urls to https

--- a/minecraft/desnoguns-mod/full-changelog/changelog.html
+++ b/minecraft/desnoguns-mod/full-changelog/changelog.html
@@ -5,7 +5,7 @@
 
 <i>DesnoGuns Mod r024</i><br>
 - NEW: the Exoskeleton armor!<br>
-- NEW: separated tabs for guns using <a href="http://www.minecraftforum.net/forums/minecraft-pocket-edition/mcpe-mods-tools/2842644">InventoryPlus</a><br><br>
+- NEW: separated tabs for guns using <a href="https://www.minecraftforum.net/forums/minecraft-pocket-edition/mcpe-mods-tools/2842644">InventoryPlus</a><br><br>
 
 <i>DesnoGuns Mod r023</i><br>
 - FIX: fixed not working recoil<br>
@@ -125,7 +125,7 @@
 - FIX: fixed disappearing items from the creative menu<br>
 - FIX: fixed the "double tap fast the aim button" bug that caused glitches with zoom<br>
 - FIX: fixed shadows and collision size of grenades<br>
-- FIX: fixed <a href="http://i.imgur.com/VDrmCkc.png">a graphical glitch</a> that was happening when using other Texture Packs at the same time<br><br>
+- FIX: fixed <a href="https://i.imgur.com/VDrmCkc.png">a graphical glitch</a> that was happening when using other Texture Packs at the same time<br><br>
 
 <i>DesnoGuns Mod r005</i><br>
 - NEW: support for Minecraft PE 0.11.x<br>
